ionos_prd/dome-certification/frontend/certification-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: certification-frontend-svc
  namespace: dome-certification
spec:
  type: ClusterIP
  selector:
    app: certification-frontend
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
