ionos_prd/dome-certification/frontend/certification-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dome-certification-frontend-ingress
  namespace: dome-certification
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dev2-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: dome-certification.dome-marketplace-prd.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: certification-frontend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - dome-certification.dome-marketplace-prd.org
      secretName: dome-certification-tls-secret
